# CTFkiller

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yml  package.json  pyproject.toml  sandbox.Dockerfile
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agent/: __init__.py  llm_client.py  models.py  orchestrator.py  planner.py  policy_engine.py  test_orchestrator.py  tools.py
backend/agent/prompts/: ctf_reverse.txt  default.txt
backend/api/: sessions.py
backend/database/: __init__.py  connection.py  models.py
backend/logs/: audit.py
backend/migrations/: 001_initial_schema.sql
backend/models/: __init__.py  artifact.py  audit_log.py  execution_plan.py  message.py  recipe.py  session.py  tool_call.py
backend/policy/: __init__.py  engine.py  rules.py
backend/sandbox/: config.py  manager.py
backend/tools/: __init__.py  archive_tools.py  base.py  execution_tools.py  file_tools.py  gateway.py  readme.md  registry.py  search_tools.py  test_registry.py
backend/workspace/: fs.py
frontend/: .lintstagedrc.js  Dockerfile  lint-staged.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/lib/: api.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/execution-log/: page.tsx
frontend/src/app/workspace/: page.tsx
frontend/src/components/chat/: Chat.tsx  ChatInterface.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/hooks/: useChat.ts  useExecutionLog.ts  useWorkspace.ts
frontend/src/lib/: api-client.ts  types.ts
(+6 files in other folders)
