[project]
name = "policy-agent"
version = "0.1.0"
description = "Policy-Constrained LLM Agent Workspace System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "docker>=7.0.0",
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
