[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-constrained-llm-agent"
version = "0.1.0"
description = "Policy-Constrained LLM Agent Workspace System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.109.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "docker>=7.0.0",
    "openai>=1.10.0",
    "tenacity>=8.2.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
policy-agent-api = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
